--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 
-  "name": "Example",
+  "name": "ArZe Bot",
 
-  "description": "Example",
+  "description": "Its a bot for my discord server",
 
   "version": "0.0.0",
 
